add Acoustic Feature Extraction (eGeMAPS)

--- a/Speech_AD.ipynb
+++ b/Speech_AD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaNOY0q+I/UrMsk1g3Q/nr",
+      "authorship_tag": "ABX9TyOu7JDjD4oFC0xJw4DzrjzR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -779,6 +779,97 @@
       "metadata": {
         "id": "Q4NRJ_ayspat"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import opensmile\n",
+        "import librosa\n",
+        "import pandas as pd\n",
+        "import os\n",
+        "import numpy as np\n",
+        "\n",
+        "# Initialize opensmile for eGeMAPS feature extraction\n",
+        "smile = opensmile.Smile(\n",
+        "    feature_set=opensmile.FeatureSet.eGeMAPSv02,\n",
+        "    feature_level=opensmile.FeatureLevel.Functionals\n",
+        ")\n",
+        "\n",
+        "# Function to extract eGeMAPS features from an audio file\n",
+        "def extract_egemaps(audio_path):\n",
+        "    try:\n",
+        "        y, sr = librosa.load(audio_path, sr=16000)  # Load audio\n",
+        "        features = smile.process_signal(y, sr)  # Extract eGeMAPS\n",
+        "        return features.values.flatten()\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error processing {audio_path}: {e}\")\n",
+        "        return None\n",
+        "\n",
+        "# Paths to audio files (diagnosis train: cn and ad subdirectories)\n",
+        "diagnosis_audio_base = '/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/'\n",
+        "cn_audio_path = os.path.join(diagnosis_audio_base, 'cn/')\n",
+        "ad_audio_path = os.path.join(diagnosis_audio_base, 'ad/')\n",
+        "\n",
+        "# Collect all .wav files from both cn/ and ad/ directories\n",
+        "audio_files = []\n",
+        "for path in [cn_audio_path, ad_audio_path]:\n",
+        "    if os.path.exists(path):\n",
+        "        audio_files.extend([os.path.join(path, f) for f in os.listdir(path) if f.endswith('.wav')])\n",
+        "    else:\n",
+        "        print(f\"Directory not found: {path}\")\n",
+        "\n",
+        "# Extract features for all audio files\n",
+        "audio_features = morf\n",
+        "audio_ids = []\n",
+        "for audio_path in audio_files:\n",
+        "    audio_file = os.path.basename(audio_path)\n",
+        "    audio_id = audio_file.split('.')[0]  # Extract ID from filename (e.g., adrso123)\n",
+        "    features = extract_egemaps(audio_path)\n",
+        "    if features is not None:\n",
+        "        audio_features.append(features)\n",
+        "        audio_ids.append(audio_id)\n",
+        "    else:\n",
+        "        print(f\"Skipping {audio_id} due to feature extraction failure\")\n",
+        "\n",
+        "# Convert to DataFrame\n",
+        "audio_features_df = pd.DataFrame(audio_features)\n",
+        "audio_features_df['ID'] = audio_ids\n",
+        "\n",
+        "# Load task1.csv for labels\n",
+        "data_path = '/content/drive/MyDrive/Voice/'\n",
+        "task1 = pd.read_csv(data_path + 'task1.csv')\n",
+        "\n",
+        "# Merge with task1 labels\n",
+        "task1_data = pd.merge(audio_features_df, task1, on='ID', how='inner')\n",
+        "print(\"Merged Acoustic Features with Labels:\")\n",
+        "print(task1_data.head())\n",
+        "\n",
+        "# Save the merged DataFrame for debugging\n",
+        "task1_data.to_csv('/content/drive/MyDrive/Voice/task1_acoustic_features.csv', index=False)\n",
+        "print(\"Saved acoustic features to /content/drive/MyDrive/Voice/task1_acoustic_features.csv\")"
+      ],
+      "metadata": {
+        "id": "nCjXc9lNtD4Q",
+        "outputId": "55c563e5-beb5-47b9-ac9f-9a4ac53f87d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'morf' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-5b8e5e89d322>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;31m# Extract features for all audio files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m \u001b[0maudio_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmorf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0maudio_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0maudio_path\u001b[0m \u001b[0;32min\u001b[0m \u001b[0maudio_files\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'morf' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
