--- a/Speech_AD.ipynb
+++ b/Speech_AD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNu/CRLImce37Kax843S2t",
+      "authorship_tag": "ABX9TyNtMzYvwrLKc+Ph2cv3Yx6M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -901,6 +901,85 @@
             "[5 rows x 90 columns]\n",
             "Number of matched records: 41\n",
             "Saved acoustic features to /content/drive/MyDrive/Voice/task1_acoustic_features.csv\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Audio IDs:\", audio_ids[:5])\n",
+        "print(\"Task1 IDs:\", task1['ID'].head())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OwZ2-MMgwjtn",
+        "outputId": "f5d5c8c5-0109-4e16-9d21-08e0084bfca6"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Audio IDs: ['adrso010', 'adrso014', 'adrso015', 'adrso005', 'adrso312']\n",
+            "Task1 IDs: 0    adrso015\n",
+            "1    adrso040\n",
+            "2    adrso026\n",
+            "3    adrso067\n",
+            "4    adrso058\n",
+            "Name: ID, dtype: object\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_features = extract_egemaps('/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/adrso173.wav')\n",
+        "print(\"Test features shape:\", test_features.shape if test_features is not None else \"Failed\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l5AP1pQuwnM8",
+        "outputId": "ea0e6bc4-abe8-4ba4-92c4-67698d4ef632"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Test features shape: (88,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Number of audio files:\", len(audio_files))\n",
+        "print(\"Sample audio files:\", audio_files[:5])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8ufgr-kLwXQ7",
+        "outputId": "eaf72444-c212-4bf6-aab2-84c0baa33211"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of audio files: 166\n",
+            "Sample audio files: ['/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/adrso010.wav', '/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/adrso014.wav', '/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/adrso015.wav', '/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/adrso005.wav', '/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/adrso312.wav']\n"
           ]
         }
       ]
