--- a/Speech_AD.ipynb
+++ b/Speech_AD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtMzYvwrLKc+Ph2cv3Yx6M",
+      "authorship_tag": "ABX9TyNwEPaCzmFndUydAqccdbWM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -906,6 +906,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## low number of matches"
+      ],
+      "metadata": {
+        "id": "hEcHlTEwxJDn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(\"Audio IDs:\", audio_ids[:5])\n",
@@ -980,6 +989,131 @@
           "text": [
             "Number of audio files: 166\n",
             "Sample audio files: ['/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/adrso010.wav', '/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/adrso014.wav', '/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/adrso015.wav', '/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/adrso005.wav', '/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/adrso312.wav']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import opensmile\n",
+        "import librosa\n",
+        "import pandas as pd\n",
+        "import os\n",
+        "import numpy as np\n",
+        "\n",
+        "# Initialize opensmile for eGeMAPS feature extraction\n",
+        "smile = opensmile.Smile(\n",
+        "    feature_set=opensmile.FeatureSet.eGeMAPSv02,\n",
+        "    feature_level=opensmile.FeatureLevel.Functionals\n",
+        ")\n",
+        "\n",
+        "# Function to extract eGeMAPS features from an audio file\n",
+        "def extract_egemaps(audio_path):\n",
+        "    try:\n",
+        "        y, sr = librosa.load(audio_path, sr=16000)  # Load audio\n",
+        "        features = smile.process_signal(y, sr)  # Extract eGeMAPS\n",
+        "        return features.values.flatten()\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error processing {audio_path}: {e}\")\n",
+        "        return None\n",
+        "\n",
+        "# Paths to audio files (diagnosis train: cn and ad subdirectories)\n",
+        "diagnosis_audio_base = '/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/'\n",
+        "cn_audio_path = os.path.join(diagnosis_audio_base, 'cn/')\n",
+        "ad_audio_path = os.path.join(diagnosis_audio_base, 'ad/')\n",
+        "\n",
+        "# Collect all .wav files from both cn/ and ad/ directories\n",
+        "audio_files = []\n",
+        "for path in [cn_audio_path, ad_audio_path]:\n",
+        "    if os.path.exists(path):\n",
+        "        files = [os.path.join(path, f) for f in os.listdir(path) if f.endswith('.wav')]\n",
+        "        audio_files.extend(files)\n",
+        "        print(f\"Found {len(files)} audio files in {path}\")\n",
+        "    else:\n",
+        "        print(f\"Directory not found: {path}\")\n",
+        "\n",
+        "print(f\"Total audio files found: {len(audio_files)}\")\n",
+        "\n",
+        "# Extract features for all audio files\n",
+        "audio_features = []\n",
+        "audio_ids = []\n",
+        "skipped_files = []\n",
+        "for audio_path in audio_files:\n",
+        "    audio_file = os.path.basename(audio_path)\n",
+        "    audio_id = audio_file.split('.')[0]  # Extract ID (e.g., adrso123)\n",
+        "    features = extract_egemaps(audio_path)\n",
+        "    if features is not None:\n",
+        "        audio_features.append(features)\n",
+        "        audio_ids.append(audio_id)\n",
+        "    else:\n",
+        "        print(f\"Skipping {audio_id} due to feature extraction failure\")\n",
+        "        skipped_files.append(audio_id)\n",
+        "\n",
+        "print(f\"Extracted features for {len(audio_features)} audio files\")\n",
+        "print(f\"Skipped {len(skipped_files)} audio files: {skipped_files}\")\n",
+        "\n",
+        "# Check if any features were extracted\n",
+        "if not audio_features:\n",
+        "    raise ValueError(\"No audio features extracted. Check audio files or extraction process.\")\n",
+        "\n",
+        "# Convert to DataFrame\n",
+        "audio_features_df = pd.DataFrame(audio_features)\n",
+        "audio_features_df['ID'] = audio_ids\n",
+        "\n",
+        "# Load task1.csv for labels\n",
+        "data_path = '/content/drive/MyDrive/Voice/'\n",
+        "task1 = pd.read_csv(data_path + 'task1.csv')\n",
+        "\n",
+        "# Normalize IDs in task1.csv to match audio file IDs\n",
+        "task1['ID'] = task1['ID'].apply(lambda x: 'adrso' + x.replace('adrsdt', '').zfill(3))\n",
+        "\n",
+        "# Check ID overlap\n",
+        "audio_id_set = set(audio_ids)\n",
+        "task1_id_set = set(task1['ID'])\n",
+        "print(f\"Audio IDs in audio_files: {len(audio_id_set)}\")\n",
+        "print(f\"Task1 IDs: {len(task1_id_set)}\")\n",
+        "print(f\"Common IDs: {len(audio_id_set & task1_id_set)}\")\n",
+        "print(f\"Audio IDs not in task1: {audio_id_set - task1_id_set}\")\n",
+        "print(f\"Task1 IDs not in audio: {task1_id_set - audio_id_set}\")\n",
+        "\n",
+        "# Merge with task1 labels\n",
+        "task1_data = pd.merge(audio_features_df, task1, on='ID', how='inner')\n",
+        "print(\"Merged Acoustic Features with Labels:\")\n",
+        "print(task1_data.head())\n",
+        "print(f\"Number of matched records: {len(task1_data)}\")\n",
+        "\n",
+        "# Save the merged DataFrame\n",
+        "task1_data.to_csv('/content/drive/MyDrive/Voice/task1_acoustic_features.csv', index=False)\n",
+        "print(\"Saved acoustic features to /content/drive/MyDrive/Voice/task1_acoustic_features.csv\")\n",
+        "\n",
+        "# Save unmatched IDs for debugging\n",
+        "unmatched_audio_ids = list(audio_id_set - task1_id_set)\n",
+        "unmatched_task1_ids = list(task1_id_set - audio_id_set)\n",
+        "pd.DataFrame({'unmatched_audio_ids': unmatched_audio_ids}).to_csv(\n",
+        "    '/content/drive/MyDrive/Voice/unmatched_audio_ids.csv', index=False\n",
+        ")\n",
+        "pd.DataFrame({'unmatched_task1_ids': unmatched_task1_ids}).to_csv(\n",
+        "    '/content/drive/MyDrive/Voice/unmatched_task1_ids.csv', index=False\n",
+        ")\n",
+        "print(\"Saved unmatched IDs to /content/drive/MyDrive/Voice/unmatched_{audio,task1}_ids.csv\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zo93GMscw53m",
+        "outputId": "5d0e9c18-6079-438e-cff2-3247a56d5f5a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 79 audio files in /content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/\n",
+            "Found 87 audio files in /content/diagnosis_train/ADReSSo21/diagnosis/train/audio/ad/\n",
+            "Total audio files found: 166\n"
           ]
         }
       ]
