--- a/Speech_AD.ipynb
+++ b/Speech_AD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwEPaCzmFndUydAqccdbWM",
+      "authorship_tag": "ABX9TyM6dRQqMTs9hOWTcW7KECuI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1103,9 +1103,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zo93GMscw53m",
-        "outputId": "5d0e9c18-6079-438e-cff2-3247a56d5f5a"
+        "outputId": "cc60717c-4df4-48a7-c7d8-25eabed63d0a"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,10 +1113,92 @@
           "text": [
             "Found 79 audio files in /content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/\n",
             "Found 87 audio files in /content/diagnosis_train/ADReSSo21/diagnosis/train/audio/ad/\n",
-            "Total audio files found: 166\n"
+            "Total audio files found: 166\n",
+            "Extracted features for 166 audio files\n",
+            "Skipped 0 audio files: []\n",
+            "Audio IDs in audio_files: 166\n",
+            "Task1 IDs: 71\n",
+            "Common IDs: 41\n",
+            "Audio IDs not in task1: {'adrso228', 'adrso211', 'adrso291', 'adrso189', 'adrso128', 'adrso177', 'adrso172', 'adrso167', 'adrso157', 'adrso188', 'adrso206', 'adrso156', 'adrso308', 'adrso154', 'adrso178', 'adrso216', 'adrso169', 'adrso202', 'adrso276', 'adrso274', 'adrso285', 'adrso200', 'adrso186', 'adrso197', 'adrso266', 'adrso265', 'adrso160', 'adrso090', 'adrso223', 'adrso161', 'adrso259', 'adrso198', 'adrso170', 'adrso141', 'adrso165', 'adrso122', 'adrso093', 'adrso299', 'adrso074', 'adrso257', 'adrso234', 'adrso283', 'adrso281', 'adrso077', 'adrso209', 'adrso247', 'adrso277', 'adrso309', 'adrso151', 'adrso153', 'adrso307', 'adrso280', 'adrso268', 'adrso289', 'adrso229', 'adrso236', 'adrso310', 'adrso222', 'adrso245', 'adrso159', 'adrso112', 'adrso158', 'adrso180', 'adrso261', 'adrso298', 'adrso215', 'adrso296', 'adrso116', 'adrso123', 'adrso232', 'adrso106', 'adrso125', 'adrso072', 'adrso302', 'adrso300', 'adrso134', 'adrso270', 'adrso316', 'adrso262', 'adrso244', 'adrso278', 'adrso183', 'adrso192', 'adrso164', 'adrso152', 'adrso273', 'adrso205', 'adrso162', 'adrso264', 'adrso142', 'adrso148', 'adrso089', 'adrso249', 'adrso246', 'adrso098', 'adrso173', 'adrso075', 'adrso237', 'adrso168', 'adrso233', 'adrso292', 'adrso144', 'adrso267', 'adrso263', 'adrso190', 'adrso218', 'adrso212', 'adrso220', 'adrso315', 'adrso130', 'adrso110', 'adrso224', 'adrso182', 'adrso092', 'adrso078', 'adrso138', 'adrso253', 'adrso260', 'adrso286', 'adrso126', 'adrso109', 'adrso248', 'adrso187', 'adrso250', 'adrso312'}\n",
+            "Task1 IDs not in audio: {'adrso050', 'adrso051', 'adrso067', 'adrso004', 'adrso011', 'adrso062', 'adrso058', 'adrso009', 'adrso044', 'adrso064', 'adrso061', 'adrso052', 'adrso069', 'adrso040', 'adrso006', 'adrso034', 'adrso038', 'adrso065', 'adrso041', 'adrso020', 'adrso048', 'adrso001', 'adrso026', 'adrso066', 'adrso042', 'adrso037', 'adrso029', 'adrso057', 'adrso030', 'adrso013'}\n",
+            "Merged Acoustic Features with Labels:\n",
+            "           0         1          2          3          4          5  \\\n",
+            "0  34.314342  0.172523  31.954039  34.558792  38.469227   6.515188   \n",
+            "1  34.439098  0.178912  29.944578  33.201965  39.123035   9.178457   \n",
+            "2  34.765678  0.144698  31.995552  35.011833  37.706375   5.710823   \n",
+            "3  30.145615  0.129570  28.376390  29.582561  32.609303   4.232912   \n",
+            "4  31.052141  0.345289  22.244028  25.008968  40.717941  18.473913   \n",
+            "\n",
+            "            6           7           8           9  ...        80        81  \\\n",
+            "0  332.870453  461.649567  120.299301   81.307747  ...  0.544044  1.976285   \n",
+            "1  169.268906  333.093689  160.969574  267.036377  ...  0.434866  2.533154   \n",
+            "2  231.058731  375.145050  145.108765  262.729279  ...  0.130108  1.557071   \n",
+            "3  292.438629  535.989441   76.417542   96.036621  ...  0.086000  1.878543   \n",
+            "4  546.450195  783.379028  370.438660  510.268463  ...  0.291039  1.648093   \n",
+            "\n",
+            "         82        83        84        85        86         87        ID  \\\n",
+            "0  2.508803  0.112807  0.123327  0.279630  0.317927 -12.181213  adrso010   \n",
+            "1  2.251715  0.204901  0.223378  0.228958  0.342663 -11.879815  adrso014   \n",
+            "2  2.098893  0.159448  0.190493  0.289759  0.382377 -23.670115  adrso015   \n",
+            "3  2.674664  0.190667  0.199302  0.170000  0.260768 -26.691757  adrso005   \n",
+            "4  3.502985  0.085695  0.098524  0.192019  0.217589 -19.202145  adrso018   \n",
+            "\n",
+            "           Dx  \n",
+            "0     Control  \n",
+            "1  ProbableAD  \n",
+            "2     Control  \n",
+            "3     Control  \n",
+            "4  ProbableAD  \n",
+            "\n",
+            "[5 rows x 90 columns]\n",
+            "Number of matched records: 41\n",
+            "Saved acoustic features to /content/drive/MyDrive/Voice/task1_acoustic_features.csv\n",
+            "Saved unmatched IDs to /content/drive/MyDrive/Voice/unmatched_{audio,task1}_ids.csv\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Explanation of Changes\n",
+        "1. **Debugging Audio Files**:\n",
+        "   - Print the number of `.wav` files in `cn/` and `ad/` directories and the total count.\n",
+        "   - Expect ~108 files (based on ADReSSo train split). If fewer, some audio files are missing.\n",
+        "\n",
+        "2. **Tracking Skipped Files**:\n",
+        "   - Maintain a `skipped_files` list to log audio IDs where feature extraction failed.\n",
+        "   - Print the number of skipped files and their IDs.\n",
+        "\n",
+        "3. **ID Overlap Analysis**:\n",
+        "   - Compare `audio_ids` (from audio files) with `task1['ID']` (after normalization) using set operations.\n",
+        "   - Print:\n",
+        "     - Number of unique audio IDs.\n",
+        "     - Number of unique `task1` IDs.\n",
+        "     - Number of common IDs (should be close to 108).\n",
+        "     - Audio IDs not in `task1.csv`.\n",
+        "     - `task1.csv` IDs not in audio files.\n",
+        "   - Save unmatched IDs to CSV files for inspection.\n",
+        "\n",
+        "4. **Preserved Core Logic**:\n",
+        "   - Kept eGeMAPS extraction, ID normalization (`adrso` + zero-padded ID), and merging logic unchanged.\n",
+        "   - Ensured 88 features are extracted per audio file.\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "MLm_FhFByMTC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7kqQcA3ay8rR"
+      },
+      "execution_count": 16,
+      "outputs": []
     }
   ]
 }
