--- a/Speech_AD.ipynb
+++ b/Speech_AD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMinUpOcOrdM7DgV8z2sLr/",
+      "authorship_tag": "ABX9TyPbvBuYZlick6kDNfuCELJ7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1727,8 +1727,240 @@
         "    print(f\"Warning: {len(missing_audio_ids)} task1.csv IDs lack audio files. Verify dataset completeness or check for additional .tgz files.\")"
       ],
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "F1LFUBxj4JuZ",
-        "outputId": "8c7e659b-3dc5-403d-da6f-c4f7848e10d1",
+        "outputId": "8c7e659b-3dc5-403d-da6f-c4f7848e10d1"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Task1.csv contains 71 IDs\n",
+            "MMSE scores file columns: ['Unnamed: 0', 'adressfname', 'mmse', 'dx']\n",
+            "MMSE scores sample:\n",
+            "   Unnamed: 0 adressfname  mmse  dx\n",
+            "0          23    adrso024    20  ad\n",
+            "1          24    adrso025    11  ad\n",
+            "2          25    adrso027    18  ad\n",
+            "3          26    adrso028    18  ad\n",
+            "4          28    adrso031    26  ad\n",
+            "MMSE scores file contains 0 IDs\n",
+            "Task1 IDs in MMSE scores: 0\n",
+            "Found 79 segmentation files in /content/diagnosis_train/ADReSSo21/diagnosis/train/segmentation/cn/\n",
+            "Found 87 segmentation files in /content/diagnosis_train/ADReSSo21/diagnosis/train/segmentation/ad/\n",
+            "Total segmentation IDs: 166\n",
+            "Task1 IDs in segmentation: 41\n",
+            "Found 79 audio files in /content/diagnosis_train/ADReSSo21/diagnosis/train/audio/cn/, 16 match task1 IDs\n",
+            "Found 87 audio files in /content/diagnosis_train/ADReSSo21/diagnosis/train/audio/ad/, 25 match task1 IDs\n",
+            "Total audio files matching task1 IDs: 41\n",
+            "Task1 IDs missing audio files (30): {'adrso050', 'adrso051', 'adrso067', 'adrso004', 'adrso011', 'adrso062', 'adrso058', 'adrso009', 'adrso044', 'adrso064', 'adrso061', 'adrso052', 'adrso069', 'adrso040', 'adrso006', 'adrso034', 'adrso038', 'adrso065', 'adrso041', 'adrso020', 'adrso048', 'adrso001', 'adrso026', 'adrso066', 'adrso042', 'adrso037', 'adrso029', 'adrso057', 'adrso030', 'adrso013'}\n",
+            "No missing audio files found in /content/\n",
+            "Extracted features for 41 audio files\n",
+            "Skipped 0 audio files: []\n",
+            "Merged Acoustic Features with Labels:\n",
+            "           0         1          2          3          4          5  \\\n",
+            "0  34.314342  0.172523  31.954039  34.558792  38.469227   6.515188   \n",
+            "1  34.439098  0.178912  29.944578  33.201965  39.123035   9.178457   \n",
+            "2  34.765678  0.144698  31.995552  35.011833  37.706375   5.710823   \n",
+            "3  30.145615  0.129570  28.376390  29.582561  32.609303   4.232912   \n",
+            "4  31.052141  0.345289  22.244028  25.008968  40.717941  18.473913   \n",
+            "\n",
+            "            6           7           8           9  ...        80        81  \\\n",
+            "0  332.870453  461.649567  120.299301   81.307747  ...  0.544044  1.976285   \n",
+            "1  169.268906  333.093689  160.969574  267.036377  ...  0.434866  2.533154   \n",
+            "2  231.058731  375.145050  145.108765  262.729279  ...  0.130108  1.557071   \n",
+            "3  292.438629  535.989441   76.417542   96.036621  ...  0.086000  1.878543   \n",
+            "4  546.450195  783.379028  370.438660  510.268463  ...  0.291039  1.648093   \n",
+            "\n",
+            "         82        83        84        85        86         87        ID  \\\n",
+            "0  2.508803  0.112807  0.123327  0.279630  0.317927 -12.181213  adrso010   \n",
+            "1  2.251715  0.204901  0.223378  0.228958  0.342663 -11.879815  adrso014   \n",
+            "2  2.098893  0.159448  0.190493  0.289759  0.382377 -23.670115  adrso015   \n",
+            "3  2.674664  0.190667  0.199302  0.170000  0.260768 -26.691757  adrso005   \n",
+            "4  3.502985  0.085695  0.098524  0.192019  0.217589 -19.202145  adrso018   \n",
+            "\n",
+            "           Dx  \n",
+            "0     Control  \n",
+            "1  ProbableAD  \n",
+            "2     Control  \n",
+            "3     Control  \n",
+            "4  ProbableAD  \n",
+            "\n",
+            "[5 rows x 90 columns]\n",
+            "Number of matched records: 41\n",
+            "Saved acoustic features to /content/drive/MyDrive/Voice/task1_acoustic_features.csv\n",
+            "Saved debugging info to /content/drive/MyDrive/Voice/{missing_audio_ids,skipped_files,segmentation_ids}.csv\n",
+            "Warning: 30 task1.csv IDs lack audio files. Verify dataset completeness or check for additional .tgz files.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import opensmile\n",
+        "import librosa\n",
+        "import pandas as pd\n",
+        "import os\n",
+        "import numpy as np\n",
+        "import glob\n",
+        "\n",
+        "# Initialize opensmile for eGeMAPS feature extraction\n",
+        "smile = opensmile.Smile(\n",
+        "    feature_set=opensmile.FeatureSet.eGeMAPSv02,\n",
+        "    feature_level=opensmile.FeatureLevel.Functionals\n",
+        ")\n",
+        "\n",
+        "# Function to extract eGeMAPS features from an audio file\n",
+        "def extract_egemaps(audio_path):\n",
+        "    try:\n",
+        "        y, sr = librosa.load(audio_path, sr=16000)  # Load audio\n",
+        "        features = smile.process_signal(y, sr)  # Extract eGeMAPS\n",
+        "        return features.values.flatten()\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error processing {audio_path}: {e}\")\n",
+        "        return None\n",
+        "\n",
+        "# Paths to data\n",
+        "data_path = '/content/drive/MyDrive/Voice/'\n",
+        "diagnosis_audio_base = '/content/diagnosis_train/ADReSSo21/diagnosis/train/audio/'\n",
+        "cn_audio_path = os.path.join(diagnosis_audio_base, 'cn/')\n",
+        "ad_audio_path = os.path.join(diagnosis_audio_base, 'ad/')\n",
+        "segmentation_base = '/content/diagnosis_train/ADReSSo21/diagnosis/train/segmentation/'\n",
+        "mmse_scores_file = '/content/diagnosis_train/ADReSSo21/diagnosis/train/adresso-train-mmse-scores.csv'\n",
+        "\n",
+        "# Load task1.csv\n",
+        "task1 = pd.read_csv(data_path + 'task1.csv')\n",
+        "task1['ID'] = task1['ID'].apply(lambda x: 'adrso' + x.replace('adrsdt', '').zfill(3))\n",
+        "task1_ids = set(task1['ID'])\n",
+        "print(f\"Task1.csv contains {len(task1)} IDs\")\n",
+        "\n",
+        "# Inspect MMSE scores file\n",
+        "try:\n",
+        "    mmse_scores = pd.read_csv(mmse_scores_file)\n",
+        "    print(\"MMSE scores file columns:\", mmse_scores.columns.tolist())\n",
+        "    print(\"MMSE scores sample:\")\n",
+        "    print(mmse_scores.head())\n",
+        "    if 'adressfname' in mmse_scores.columns:\n",
+        "        mmse_ids = set(mmse_scores['adressfname'])\n",
+        "    else:\n",
+        "        mmse_ids = set()\n",
+        "        print(\"No 'adressfname' column in MMSE scores file\")\n",
+        "    print(f\"MMSE scores file contains {len(mmse_ids)} IDs\")\n",
+        "    print(f\"Task1 IDs in MMSE scores: {len(task1_ids & mmse_ids)}\")\n",
+        "    print(f\"Missing task1 IDs in MMSE scores: {len(missing_audio_ids & mmse_ids)}\")\n",
+        "except FileNotFoundError:\n",
+        "    print(f\"MMSE scores file not found: {mmse_scores_file}\")\n",
+        "    mmse_ids = set()\n",
+        "except Exception as e:\n",
+        "    print(f\"Error reading MMSE scores file: {e}\")\n",
+        "    mmse_ids = set()\n",
+        "\n",
+        "# Collect segmentation IDs\n",
+        "segmentation_ids = set()\n",
+        "for path in [os.path.join(segmentation_base, 'cn/'), os.path.join(segmentation_base, 'ad/')]:\n",
+        "    if os.path.exists(path):\n",
+        "        files = [f.split('.')[0] for f in os.listdir(path) if f.endswith('.csv')]\n",
+        "        segmentation_ids.update(files)\n",
+        "        print(f\"Found {len(files)} segmentation files in {path}\")\n",
+        "    else:\n",
+        "        print(f\"Segmentation directory not found: {path}\")\n",
+        "print(f\"Total segmentation IDs: {len(segmentation_ids)}\")\n",
+        "print(f\"Task1 IDs in segmentation: {len(task1_ids & segmentation_ids)}\")\n",
+        "\n",
+        "# Collect .wav files from cn/ and ad/, filtering by task1 IDs\n",
+        "audio_files = []\n",
+        "audio_id_to_path = {}\n",
+        "for path in [cn_audio_path, ad_audio_path]:\n",
+        "    if os.path.exists(path):\n",
+        "        files = [f for f in os.listdir(path) if f.endswith('.wav')]\n",
+        "        for f in files:\n",
+        "            audio_id = f.split('.')[0]\n",
+        "            if audio_id in task1_ids:\n",
+        "                audio_files.append(os.path.join(path, f))\n",
+        "                audio_id_to_path[audio_id] = os.path.join(path, f)\n",
+        "        print(f\"Found {len(files)} audio files in {path}, {sum(1 for f in files if f.split('.')[0] in task1_ids)} match task1 IDs\")\n",
+        "    else:\n",
+        "        print(f\"Directory not found: {path}\")\n",
+        "\n",
+        "print(f\"Total audio files matching task1 IDs: {len(audio_files)}\")\n",
+        "\n",
+        "# Search for missing task1 IDs across all directories\n",
+        "missing_audio_ids = task1_ids - set(audio_id_to_path.keys())\n",
+        "print(f\"Task1 IDs missing audio files ({len(missing_audio_ids)}): {missing_audio_ids}\")\n",
+        "\n",
+        "# Recursive search for missing audio files\n",
+        "found_missing = {}\n",
+        "for missing_id in missing_audio_ids:\n",
+        "    matches = glob.glob(f\"/content/**/{missing_id}.wav\", recursive=True)\n",
+        "    if matches:\n",
+        "        found_missing[missing_id] = matches\n",
+        "if found_missing:\n",
+        "    print(\"Found missing audio files:\")\n",
+        "    for id_, paths in found_missing.items():\n",
+        "        print(f\"{id_}: {paths}\")\n",
+        "else:\n",
+        "    print(\"No missing audio files found in /content/\")\n",
+        "\n",
+        "# Extract features for matching audio files\n",
+        "audio_features = []\n",
+        "audio_ids = []\n",
+        "skipped_files = []\n",
+        "for audio_path in audio_files:\n",
+        "    audio_file = os.path.basename(audio_path)\n",
+        "    audio_id = audio_file.split('.')[0]\n",
+        "    features = extract_egemaps(audio_path)\n",
+        "    if features is not None:\n",
+        "        audio_features.append(features)\n",
+        "        audio_ids.append(audio_id)\n",
+        "    else:\n",
+        "        print(f\"Skipping {audio_id} due to feature extraction failure\")\n",
+        "        skipped_files.append(audio_id)\n",
+        "\n",
+        "print(f\"Extracted features for {len(audio_features)} audio files\")\n",
+        "print(f\"Skipped {len(skipped_files)} audio files: {skipped_files}\")\n",
+        "\n",
+        "# Check if any features were extracted\n",
+        "if not audio_features:\n",
+        "    raise ValueError(\"No audio features extracted. Check audio files or extraction process.\")\n",
+        "\n",
+        "# Convert to DataFrame\n",
+        "audio_features_df = pd.DataFrame(audio_features)\n",
+        "audio_features_df['ID'] = audio_ids\n",
+        "\n",
+        "# Merge with task1 labels\n",
+        "task1_data = pd.merge(audio_features_df, task1, on='ID', how='inner')\n",
+        "print(\"Merged Acoustic Features with Labels:\")\n",
+        "print(task1_data.head())\n",
+        "print(f\"Number of matched records: {len(task1_data)}\")\n",
+        "\n",
+        "# Save the merged DataFrame\n",
+        "task1_data.to_csv('/content/drive/MyDrive/Voice/task1_acoustic_features.csv', index=False)\n",
+        "print(\"Saved acoustic features to /content/drive/MyDrive/Voice/task1_acoustic_features.csv\")\n",
+        "\n",
+        "# Save debugging info\n",
+        "pd.DataFrame({'missing_audio_ids': list(missing_audio_ids)}).to_csv(\n",
+        "    '/content/drive/MyDrive/Voice/missing_audio_ids.csv', index=False\n",
+        ")\n",
+        "pd.DataFrame({'skipped_files': skipped_files}).to_csv(\n",
+        "    '/content/drive/MyDrive/Voice/skipped_files.csv', index=False\n",
+        ")\n",
+        "pd.DataFrame({'segmentation_ids': list(segmentation_ids)}).to_csv(\n",
+        "    '/content/drive/MyDrive/Voice/segmentation_ids.csv', index=False\n",
+        ")\n",
+        "print(\"Saved debugging info to /content/drive/MyDrive/Voice/{missing_audio_ids,skipped_files,segmentation_ids}.csv\")\n",
+        "\n",
+        "# Note dataset limitation\n",
+        "if len(missing_audio_ids) > 0:\n",
+        "    print(f\"Warning: {len(missing_audio_ids)} task1.csv IDs lack audio files. Verify dataset completeness or check for additional .tgz files.\")"
+      ],
+      "metadata": {
+        "id": "4kjHd5PX5BGx",
+        "outputId": "d337ca29-3baf-41d3-ad1c-4a358754f8ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1748,8 +1980,9 @@
             "2          25    adrso027    18  ad\n",
             "3          26    adrso028    18  ad\n",
             "4          28    adrso031    26  ad\n",
-            "MMSE scores file contains 0 IDs\n",
-            "Task1 IDs in MMSE scores: 0\n",
+            "MMSE scores file contains 166 IDs\n",
+            "Task1 IDs in MMSE scores: 41\n",
+            "Missing task1 IDs in MMSE scores: 0\n",
             "Found 79 segmentation files in /content/diagnosis_train/ADReSSo21/diagnosis/train/segmentation/cn/\n",
             "Found 87 segmentation files in /content/diagnosis_train/ADReSSo21/diagnosis/train/segmentation/ad/\n",
             "Total segmentation IDs: 166\n",
