Not good result

--- a/Speech_AD.ipynb
+++ b/Speech_AD.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSxiFpoVXfkH+K90Nxje+F",
+      "authorship_tag": "ABX9TyNOyNJYHOfi7MElJ9GGTxnV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2424,6 +2424,167 @@
             "[nltk_data]     /root/nltk_data...\n",
             "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
             "[nltk_data]       date!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Restored Step 4: Simulated Linguistic Features"
+      ],
+      "metadata": {
+        "id": "BvbogH_T8tv6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# Load task1_data from Step 3\n",
+        "task1_data = pd.read_csv('/content/drive/MyDrive/Voice/task1_acoustic_features.csv')\n",
+        "\n",
+        "# Simulate linguistic features from eval-summary.docx (DIAGNOSIS-TRAIN-AD/CN)\n",
+        "linguistic_features = {\n",
+        "    'ID': task1_data['ID'],\n",
+        "    'MLU': np.random.normal(12.625, 11.835, len(task1_data)),  # Mean of AD (8.68) and CN (17.57)\n",
+        "    'TTR': np.random.normal(0.665, 0.13, len(task1_data)),     # Mean of AD (0.66) and CN (0.67)\n",
+        "    '%_nouns': np.random.normal(22.745, 7.3, len(task1_data)), # Mean of AD (20.62) and CN (24.87)\n",
+        "    '%_verbs': np.random.normal(19.015, 4.55, len(task1_data)) # Mean of AD (19.12) and CN (18.91)\n",
+        "}\n",
+        "\n",
+        "linguistic_features_df = pd.DataFrame(linguistic_features)\n",
+        "\n",
+        "# Merge with task1_data labels\n",
+        "task1_linguistic_data = pd.merge(linguistic_features_df, task1_data[['ID', 'Dx']], on='ID')\n",
+        "print(\"Merged Linguistic Features with Labels:\")\n",
+        "print(task1_linguistic_data.head())\n",
+        "\n",
+        "# Save for next steps\n",
+        "task1_linguistic_data.to_csv('/content/drive/MyDrive/Voice/task1_linguistic_features.csv', index=False)\n",
+        "print(\"Saved linguistic features to /content/drive/MyDrive/Voice/task1_linguistic_features.csv\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qsB04PtM8p0t",
+        "outputId": "706dc9e3-329e-4ed4-861e-fbbfb418786e"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Merged Linguistic Features with Labels:\n",
+            "         ID        MLU       TTR    %_nouns    %_verbs          Dx\n",
+            "0  adrso010  27.396049  0.441229  29.927782  20.649705     Control\n",
+            "1  adrso014   8.033289  0.882510  10.582943  25.184818  ProbableAD\n",
+            "2  adrso015  23.863713  0.854305  28.208900  20.508639     Control\n",
+            "3  adrso005   9.619413  0.529333  28.138312  18.727957     Control\n",
+            "4  adrso018  34.630692  0.533147  22.200092  25.231971  ProbableAD\n",
+            "Saved linguistic features to /content/drive/MyDrive/Voice/task1_linguistic_features.csv\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split, cross_val_score\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.metrics import accuracy_score, classification_report\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "# Load data\n",
+        "acoustic_df = pd.read_csv('/content/drive/MyDrive/Voice/task1_acoustic_features.csv')\n",
+        "linguistic_df = pd.read_csv('/content/drive/MyDrive/Voice/task1_linguistic_features.csv')\n",
+        "\n",
+        "# Merge features\n",
+        "merged_df = pd.merge(acoustic_df.drop(columns=['Dx']), linguistic_df, on='ID')\n",
+        "print(\"Merged features shape:\", merged_df.shape)\n",
+        "print(\"Dx distribution:\", merged_df['Dx'].value_counts())\n",
+        "\n",
+        "# Prepare features and labels\n",
+        "X = merged_df.drop(columns=['ID', 'Dx'])\n",
+        "y = merged_df['Dx'].map({'Control': 0, 'ProbableAD': 1})\n",
+        "\n",
+        "# Split data (20% test set)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+        "\n",
+        "# Scale features\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train)\n",
+        "X_test_scaled = scaler.transform(X_test)\n",
+        "\n",
+        "# Train SVM\n",
+        "svm = SVC(kernel='linear', random_state=42, class_weight='balanced')\n",
+        "svm.fit(X_train_scaled, y_train)\n",
+        "\n",
+        "# Evaluate SVM\n",
+        "y_pred_svm = svm.predict(X_test_scaled)\n",
+        "print(\"SVM Accuracy:\", accuracy_score(y_test, y_pred_svm))\n",
+        "print(\"SVM Classification Report:\")\n",
+        "print(classification_report(y_test, y_pred_svm, target_names=['Control', 'ProbableAD']))\n",
+        "\n",
+        "# Cross-validation\n",
+        "svm_cv_scores = cross_val_score(svm, scaler.transform(X), y, cv=5, scoring='accuracy')\n",
+        "print(\"SVM Cross-Validation Accuracy: Mean =\", svm_cv_scores.mean(), \"Std =\", svm_cv_scores.std())\n",
+        "\n",
+        "# Try Random Forest\n",
+        "rf = RandomForestClassifier(n_estimators=100, random_state=42, class_weight='balanced')\n",
+        "rf.fit(X_train_scaled, y_train)\n",
+        "y_pred_rf = rf.predict(X_test_scaled)\n",
+        "print(\"Random Forest Accuracy:\", accuracy_score(y_test, y_pred_rf))\n",
+        "print(\"Random Forest Classification Report:\")\n",
+        "print(classification_report(y_test, y_pred_rf, target_names=['Control', 'ProbableAD']))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3TVRH67E8y3h",
+        "outputId": "7e3f6f11-23b1-4412-9d63-85fd96dde5e8"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Merged features shape: (41, 94)\n",
+            "Dx distribution: Dx\n",
+            "ProbableAD    21\n",
+            "Control       20\n",
+            "Name: count, dtype: int64\n",
+            "SVM Accuracy: 0.4444444444444444\n",
+            "SVM Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "     Control       0.40      0.50      0.44         4\n",
+            "  ProbableAD       0.50      0.40      0.44         5\n",
+            "\n",
+            "    accuracy                           0.44         9\n",
+            "   macro avg       0.45      0.45      0.44         9\n",
+            "weighted avg       0.46      0.44      0.44         9\n",
+            "\n",
+            "SVM Cross-Validation Accuracy: Mean = 0.538888888888889 Std = 0.13362237189784104\n",
+            "Random Forest Accuracy: 0.4444444444444444\n",
+            "Random Forest Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "     Control       0.40      0.50      0.44         4\n",
+            "  ProbableAD       0.50      0.40      0.44         5\n",
+            "\n",
+            "    accuracy                           0.44         9\n",
+            "   macro avg       0.45      0.45      0.44         9\n",
+            "weighted avg       0.46      0.44      0.44         9\n",
+            "\n"
           ]
         }
       ]
